--- a/pom.xml
+++ b/pom.xml
@@ -1306,6 +1306,11 @@
         <artifactId>guice</artifactId>
         <version>2.0</version>
       </dependency>
+      <dependency>
+        <groupId>com.google.code.guice</groupId>
+        <artifactId>guice-jmx</artifactId>
+        <version>2.0</version>
+      </dependency>
       <!-- dependency not declared in guice pom -->
       <dependency>
         <groupId>aopalliance</groupId>
@@ -1335,7 +1340,7 @@
       <dependency>
         <groupId>caja</groupId>
         <artifactId>caja</artifactId>
-        <version>RELEASE</version>
+        <version>r3828</version>
         <scope>compile</scope>
       </dependency>
       <dependency>
