Remove old google-collections dependency and replace it by guava

--- a/java/common/pom.xml
+++ b/java/common/pom.xml
@@ -88,8 +88,8 @@
       <artifactId>aopalliance</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.google.collections</groupId>
-      <artifactId>google-collections</artifactId>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
     </dependency>
     <dependency>
       <groupId>commons-codec</groupId>
