--- a/java/gadgets/pom.xml
+++ b/java/gadgets/pom.xml
@@ -141,8 +141,8 @@
       <artifactId>oauth-httpclient3</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.google.collections</groupId>
-      <artifactId>google-collections</artifactId>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
     </dependency>
     <dependency>
       <groupId>com.google.code.guice</groupId>
