--- a/java/samples/pom.xml
+++ b/java/samples/pom.xml
@@ -135,8 +135,8 @@
         <artifactId>annotations</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.google.collections</groupId>
-      <artifactId>google-collections</artifactId>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
     </dependency>
     <dependency>
       <groupId>net.oauth.core</groupId>
