--- a/pom.xml
+++ b/pom.xml
@@ -1318,9 +1318,9 @@
         <version>1.0</version>
       </dependency>
       <dependency>
-        <groupId>com.google.collections</groupId>
-        <artifactId>google-collections</artifactId>
-        <version>1.0-rc2</version>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>13.0.1</version>
       </dependency>
       <dependency>
         <groupId>commons-codec</groupId>
