--- a/java/common/pom.xml
+++ b/java/common/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.apache.shindig</groupId>
     <artifactId>shindig-project</artifactId>
-    <version>1.1-BETA5-incubating-nx2</version>
+    <version>1.1-BETA5-incubating-nx3-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
